tests/snapshots/lingui_directive__define_message_id_prefix_leader_with_matching_explicit_id.snap
---
source: tests/lingui_directive.rs
info:
  id_prefix_leader: "."
---
import { defineMessage } from '@lingui/core/macro';
/* lingui-set idPrefix="module" */
const msg = defineMessage({ id: ".greeting", message: "Hello" })

↓ ↓ ↓ ↓ ↓ ↓

/* lingui-set idPrefix="module" */ const msg = /*i18n*/ {
    id: "module.greeting",
    message: "Hello"
};
