tests/snapshots/lingui_directive__js_t_directives_merge_with_preceding_ones.snap
---
source: tests/lingui_directive.rs
---
import { t } from '@lingui/core/macro';
/* lingui-set context="ctx" comment="cmt" */
const msg1 = t`Hello`
/* lingui-set context="new ctx" */
const msg2 = t`World`

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
/* lingui-set context="ctx" comment="cmt" */ const msg1 = $_i18n._(/*i18n*/ {
    id: "3ZSjnQ",
    message: "Hello",
    comment: "cmt",
    context: "ctx"
});
/* lingui-set context="new ctx" */ const msg2 = $_i18n._(/*i18n*/ {
    id: "Wrs89z",
    message: "World",
    comment: "cmt",
    context: "new ctx"
});
