tests/snapshots/lingui_directive__js_t_id_only_with_directive_context_uses_context_for_hash.snap
---
source: tests/lingui_directive.rs
info:
  descriptor_fields: id-only
---
import { t } from '@lingui/core/macro';
/* lingui-set context="my context" */
const msg = t`Hello`

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
/* lingui-set context="my context" */ const msg = $_i18n._(/*i18n*/ {
    id: "WMU_Op"
});
